# libfremen

./: CMakeLists.txt  LICENSE  README.md
include/libfremen/: fremen_model.hpp
src/: fremen_model.cpp
